--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "react-redux-firebase",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://patrykomiotek.github.io/react-todo-redux/",
+  "private": false,
   "dependencies": {
-    "firebase": "^4.9.0",
+    "gh-pages": "^1.1.0",
     "material-ui": "^1.0.0-beta.29",
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
