--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-firebase",
+  "name": "react-redux-redux",
   "version": "0.1.0",
   "homepage": "https://patrykomiotek.github.io/react-todo-redux/",
   "private": false,
